<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_light"
    tools:context=".MainActivity">

    <!-- Contenedor para el Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Película más vista del año"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Imagen 1: Deadpool 3 -->
    <ImageView
        android:id="@+id/imageViewDeadpool1"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/imagen_1_deadpool"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/deadpool1" />

    <!-- Texto: Deadpool 3 2024 -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadpool"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/imageViewDeadpool1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Texto: Deadpool y Wolverine en cines -->
    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:fontFamily="@font/opensans"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Imágenes Deadpool 2 y Deadpool -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/imageViewDeadpool2"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:contentDescription="@string/imagen_2_deadpool"
            android:scaleType="centerCrop"
            android:src="@drawable/deadpool2" />

        <ImageView
            android:id="@+id/imageViewDeadpool"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/imagen_3_deadpool"
            android:scaleType="centerCrop"
            android:src="@drawable/deadpool3" />
    </LinearLayout>

    <!-- Botón: Abrir -->
    <Button
        android:id="@+id/buttonAbrir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/abrir"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewDeadpool2"
        tools:ignore="NotSibling" />
</androidx.constraintlayout.widget.ConstraintLayout>
